Add fixed files with homework 15